[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gp_tools"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your_email@example.com" },
]
description = "一个机构对股票评级的数据查询工具"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "mysql-connector-python",
    "requests",
    "beautifulsoup4",
    "lxml",
]
urls = { Homepage = "https://github.com/your_username/gp_tools" }

[project.scripts]
gp_tools = "gp_tools.__main__:main"